[tool.poetry]
name = "dashboard-fastapi"
version = "0.1.0"
description = ""
authors = ["nohhongju <ghdwn49@gmail.com>"]
readme = "README.md"
packages = [{include = "dashboard_fastapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.115.6"}
pytest = "^8.3.4"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "-v -p no:warnings" # 옵션


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
